@@ -1,3 +1,7 @@
+2001-01-17  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
+	* tests/bit-operations.test:  Added.
+
 2000-11-03  Dirk Herrmann  <D.Herrmann@tu-bs.de>
 
 	* tests/gc.test:  Added.
